--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -21,8 +21,7 @@ cmd:
 
       /donate - support the developer
 
-      GitHub: https://github.com/LyoSU/fStikBot
-      👨🏻‍💻 Developer channel: @LyBlog
+      👨🏻‍💻 Developer : @VasuXD
     catalog: |
       <b>😻 You can find new sticker packs in our catalog</b>
 
@@ -498,5 +497,5 @@ error:
   unknown: |
     <b>An unknown error has occurred, please try again.</b>
 
-    If the problem persists, then write to @Ly_oBot.
+    If the problem persists, then write to @VasuXD.
     Please write immediately about which bot you are talking about and describe the problem in detail in one message.
